src/Compilers/Test/Resources/Core/MetadataTests/Invalid/Signatures/build.bat
ilasm SignatureCycle2.il
csi munge.csx SignatureCycle2.exe 15-12-05-01-20-06-08 15-12-05-01-20-0A-08

ilasm TypeSpecInWrongPlace.il
csi munge.csx TypeSpecInWrongPlace.exe 00-01-01-15-12-05-01-08 00-01-01-12-06-00-00-00 

